minor change css dashboard

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-   <header>
-      <h1>Dasboard</h1>
-      <nav>
+   <header class="dashboard-header">
+      <nav class="navbar">
+         <h1 class="title">Dasboard</h1>
          <ul>
             <li><a href="/order_tracking">Order tracking</a></li>
             <li><a href="/chat">Chat</a></li>
