--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webleb</title>
+  <title>Bawokmart</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,7 +14,7 @@
 
 <body style="display:flex; align-items:center; justify-content:center;">
   <div class="img">
-    <img src="assets/pict1.jpg" alt="">
+    <img src="assets/pict1.jpg" style="border-radius: 12px; box-shadow: 3px 2px 3px 2px grey;" alt="">
   </div>
   <div class="login-page">
     <div class="form">
